--- a/product/移动与通信/腾讯移动推送/快速入门/产品限制说明.md
+++ b/product/移动与通信/腾讯移动推送/快速入门/产品限制说明.md
@@ -2,25 +2,36 @@
 - 体验版应用最多支持1000个设备参与测试，超量可能会被终止试用，请勿商用以免造成损失。
 
 
-## Android / iOS消息内容限制：
-- Android 和 iOS 推送的消息体大小限制为4K，此限制适用于 Push API 中的 message 字段。
-
-### 使用 Android 厂商通道的限制
-#### Android消息标题 ：
-小米： 50个字符，中英文都算一个。
-华为：40个字符，中英文都算一个。
-魅族：32个字符，中英文都算一个。
-oppo：32个字符，中英文都算一个。
-vivo： 20个汉字，40个英文字符。
+## 通知标题和内容长度限制：
 
 
-#### Android消息内容：
-小米：128个字符，中英文都算一个。
-华为：80个字符，中英文都算一个。
-魅族：100个字符，中英文都算一个。
-oppo：200个字符，中英文都算一个。
-vivo：50个汉字，100个英文字符。
->?厂商通道超过字符限制推送会失败，此时会通过 TPNS 通道补发。
+###  Android 推送通道限制
+
+| 通道       |        通知标题长度限制           |    通知内容长度限制                  |
+| --------------- | ------| -------------------------------------------- |
+| TPNS | 20个字符，超过部分会显示省略号| 字符数无限制|
+| 小米|  50个字符，中英文都算一个|128个字符，中英文都算一个|
+| 华为|  40个字符，中英文都算一个|128个字符，中英文都算一个|
+| 魅族 | 32个字符，中英文都算一个|  100个字符，中英文都算一个 |
+| oppo|  32个字符，中英文都算一个|128个字符，中英文都算一个|
+| vivo|  20个汉字，40个英文字符|128个字符，中英文都算一个|
+>?
+>- 厂商通道超过字符限制推送会失败，此时会通过 TPNS 通道补发。
+>- Android 推送的总消息体大小限制为4K，此限制适用于 Push API 中的 message 字段。
+
+
+
+### iOS  推送通道限制
+
+| 通道       |        通知标题长度限制           |    通知内容长度限制                  |
+| --------------- | ------| -------------------------------------------- |
+| APNs | 20个汉字，40个英文字符，超过部分会显示省略号| <li>通知中心最多显示110个字符，55个汉字，超过部分会显示省略号<li>锁屏状态最多显示110个字符，55个汉字，超过部分会显示省略号<li>顶部弹窗最多显示62个字符，31个汉字，超过部分会显示省略号 |
+| TPNS | 长度限制同APNs| 长度限制同APNs |
+
+
+>?
+>
+>- iOS 推送的总消息体大小限制为4K，此限制适用于 Push API 中的 message 字段。
 
 
 ## API 使用限制
