--- a/product/移动与通信/腾讯移动推送/API 文档/推送相关接口/推送接口.md
+++ b/product/移动与通信/腾讯移动推送/API 文档/推送相关接口/推送接口.md
@@ -245,6 +245,7 @@ Android 平台具体字段如下表：
 | icon_res       | String  | Android | 无     | 否   | 上传的通知栏缩略图 url 地址，仅 TPNS、华为通道支持。缩略图格式要求可参考 [富媒体通知文档](https://cloud.tencent.com/document/product/548/46964)|
 | style_id       | Integer | Android | 1      | 否   | 设置是否覆盖指定编号的通知样式                               |
 | small_icon     | String  | Android | 无     | 否   | 消息在状态栏显示的图标，若不设置，则显示应用图标             |
+| icon_color      | Integer | Android | 0      | 否   | 通知栏小图标染色，只针对google设备有效。需要使用颜色的16进制如：0xFF00FFFF|
 | action         | Object  | Android | 有     | 否   | 设置点击通知栏之后的行为，默认为打开 App                     |
 | action_type    | Integer | Action  | 有     | 否   | 点击动作类型，<li>1：打开 activity 或 App 本身</li><li>2：打开浏览器</li><li>3：打开 Intent（推荐 [配置指引](https://cloud.tencent.com/document/product/548/36674#.E5.A6.82.E4.BD.95.E8.AE.BE.E7.BD.AE.E6.B6.88.E6.81.AF.E7.82.B9.E5.87.BB.E4.BA.8B.E4.BB.B6.EF.BC.9F)） </li> |
 | custom_content | String  | Android | 无     | 否   | 用户自定义的参数（需要序列化为 json string）<br> **注意：**<li>为适配厂商高级功能，TPNS 于2020年7月15日正式将华为推送协议升级至 V4，华为 V4协议不支持通过 custom_content 字段携带业务自定义参数。<li>如果您集成了华为厂商通道，建议您改用 [intent](https://cloud.tencent.com/document/product/548/36674#.E5.A6.82.E4.BD.95.E8.AE.BE.E7.BD.AE.E6.B6.88.E6.81.AF.E7.82.B9.E5.87.BB.E4.BA.8B.E4.BB.B6.EF.BC.9F) 方式携带自定义参数，否则将导致自定义参数不能成功通过华为推送通道下发。<li>若需继续使用原 V2 协议，可点击控制台右上角「扫码咨询」，为您开启白名单。 |
